[tool.poetry]
name = "documents-llm"
version = "0.1.0"
description = "Scripts to analyze documents using LLMs"
authors = ["Vincent Grégoire <vincent@codes.finance>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.52.0"
mistralai = "^1.1.0"
langchain_mistralai = "^0.2.0"
langchain-anthropic = "^0.2.3"
langchain-google-genai = "^2.0.1"
langchain = "^ 0.3.4"
langchain_community = "^0.3.3"
rich = "^13.9.2"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.3"
pypdf = "^5.0.1"
tiktoken = "^0.8.0"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
